# hermes-market-skills

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt
scripts/: install-to-hermes.sh  smoketest.sh
skills/: __init__.py
skills/_shared/: __init__.py  chart.py  http_cache.py  llm_summary.py  output.py  ta.py
skills/crypto/: README.md  SKILL.md  __init__.py  analyze.py  feeds.py
skills/forex_comm/: README.md  SKILL.md  __init__.py  analyze.py  feeds.py
skills/saham_idn/: README.md  SKILL.md  __init__.py  analyze.py  feeds.py
tests/: test_symbol_routing.py
